# pq-compact-rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs  plan.rs
src/compact/: local.rs  remote.rs
src/plan/: file_info.rs  fingerprint.rs
