[package]
name = "pq-compact"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
arrow = "56.0.0"
glob = "0.3.3"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parquet = "56.0.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.45", features = ["derive"] }
